  * Patched uulib (in nget+uulib) to avoid detecting some text posts as UUdata. (patch also available at http://nget.sf.net/patches/uulib-0.5.18-detect_text_as_uudata_fix.patch-v2)

2002-12-24 v0.23:
  * Add --decode arg so -k and -K can be negated.
  * Change -K's long arg from --keep2 to --no-decode to be more descriptive.
  * Make ngetlite check if the tempfile already exists and skip retrieving that article (in case it was already downloaded by nget.)
  * Stop some inconsequential messages from being printed when -qq was specified.
  * Fix some errors that were being printed on stdout rather than stderr.
  * Add --timeout arg. (overrides .ngetrc timeout option)
  * Fix segfault if uulib gets confused and UUGetFileListItem returns an item with a NULL filename. (reported by joakim verona)
  * Add support for specifying multiple groups (comma seperated) to -g/-G/-x for updating/searching/flushing several groups at once.
  * Fix exception when using -i and no parts of a file could be retrieved.
  * Add "*" as a special alias for selecting all cached groups.
  * Add --dupepath argument to specify extra directories to search for dupe files in. (suggested by Waldemar la Tendresse)

2002-10-28 v0.22.1:
  * Fix segv on saving text file if no uulib info was recorded.
  * Fix bug introduced in 0.22 where a textfile would be generated even if there were decode errors.
  * Fix ngetlite handling of servers that do a shutdown on the socket after an error (as opposed to just closing.)

2002-10-18 v0.22:
  * With fullxover=2, don't needlessly retrieve article list if all cached headers are older than all available headers.
  * Fix group/grouplist typo in manpage exit status warnings section.
  * Add "xover" exit warning status.
  * Workaround rare streaming bug in DNEWS servers that drops the end part of a xover reply (by disabling streaming and trying again.)
  * Allow -p to create missing directories recursively (with --makedirs) and add # setting for makedirs.